; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_diskio.c_disk_initialize.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_diskio.c_disk_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STA_NOINIT = common dso_local global i32 0, align 4
@m_status = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @disk_initialize(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @platform_sdcard_init(i32 1, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* @STA_NOINIT, align 4
  %9 = xor i32 %8, -1
  %10 = load i32, i32* @m_status, align 4
  %11 = and i32 %10, %9
  store i32 %11, i32* @m_status, align 4
  br label %12

12:                                               ; preds = %7, %1
  %13 = load i32, i32* @m_status, align 4
  ret i32 %13
}

declare dso_local i64 @platform_sdcard_init(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
